# learning-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE.sig  build.rs  main.ipynb  test.data
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
benches/: bitsextract.rs  bitstream.rs  byte_by_byte.rs  cargo.rs  copy_within.rs  current.rs  huffman.rs  inline.rs  loop.rs  loop_unrolling.rs  simd.rs  slice.rs  value.rs  with_simd.rs
src/: adler32.rs  bitstream.rs  cat.rs  cli.rs  commands.rs  databricks.rs  environment.rs  extract.asm  glibc.rs  heap.rs  hello.asm  hello.rs  helpers.rs  huffman.rs  inflate.rs  kernel.rs  lib.rs  linux.rs  main.rs  memory.rs  proc.rs  sha1.rs  syscall.rs  syscalls.rs  system.rs  thread.rs  trace.rs  uring.rs  zlib.rs
src/apps/demo/: Cargo.toml
src/apps/demo/src/: main.rs  start.rs  trace.rs
src/apps/demo/src/commands/: cat.rs  errno.rs  faster.rs  hello.rs  mod.rs  pipe.rs  sha1.rs  spawn.rs  sync.rs  thread.rs  tick.rs
src/bitstream/: bitwise.rs  bytewise.rs  default.rs  header.rs  mod.rs  optimized.rs
src/commands/: cat.rs  errno.rs  faster.rs  hello.rs  mod.rs  pipe.rs  sha1.rs  spawn.rs  sync.rs  thread.rs  tick.rs
src/databricks/: errors.rs  messages.rs  mod.rs
src/heap/: mod.rs
src/huffman/: bounds.rs  header.rs  iterative.rs  lookup.rs  mod.rs
src/jupyter/: client.rs  connection.rs  errors.rs  messages.rs  mod.rs  protocol.rs
src/kernel/: client.rs  errors.rs  mod.rs  senders.rs
src/runtime/: core.rs  erase.rs  file.rs  mem.rs  mod.rs  pin.rs  pipe.rs  pool.rs  refs.rs  registry.rs  spawn.rs  stdout.rs  thread.rs  time.rs  token.rs
src/shared/adma-heap/: Cargo.toml
src/shared/adma-heap/src/: alloc.rs  (+11 more)
src/shared/adma-io/: Cargo.toml
src/shared/adma-io/src/: core.rs  heap.rs  kernel.rs  lib.rs  pipe.rs  proc.rs  syscall.rs  trace.rs  uring.rs
src/shared/adma-io/src/heap/: mod.rs  pool.rs  smart.rs
src/shared/adma-io/src/runtime/: callable.rs  core.rs  erase.rs  file.rs  mem.rs  mod.rs  ops.rs  pin.rs  pipe.rs  pollable.rs  pool.rs  raw.rs  refs.rs  registry.rs  spawn.rs  stdout.rs  thread.rs  time.rs  token.rs  uring.rs  utils.rs
src/shared/adma-io/src/runtime/ops/: channel.rs  close.rs  context.rs  core.rs  ctx.rs  execute.rs  file.rs  fs.rs  handle.rs  mem.rs  mod.rs  noop.rs  open.rs  pipe.rs  read.rs  spawn.rs  std.rs  time.rs  token.rs  write.rs
src/shared/adma-io/src/runtime/ops/channel/: ack.rs  close.rs  create.rs  drain.rs  drop.rs  mod.rs  read.rs  tests.rs  wait.rs  write.rs
src/shared/adma-trace/: Cargo.toml
src/shared/adma-uring/: Cargo.toml
src/shared/adma-uring/src/: complete.rs  entry.rs  init.rs  join.rs  kernel.rs  lib.rs  shutdown.rs  submit.rs  syscall.rs  trace.rs
(+6 files in other folders)
