[package]
name = "deflate"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "deflate"
path = "src/main.rs"

[dependencies]
criterion = { version = "0.5.1" }
rand = { version = "0.8.5" }
structopt = { version = "0.3.26" }
thiserror = { version = "1.0.50" }
tokio = { version = "1.34.0", features = ["full"] }

[[bench]]
name = "bitsextract"
harness = false

[[bench]]
name = "bitstream"
harness = false

[[bench]]
name = "huffman"
harness = false
