[package]
name = "learning-rust"
version = "0.0.0"
edition = "2021"
authors = ["Adrian Macal <adma@amacal.pl>"]

[features]
default = []
tracing = []

[profile.dev]
opt-level = "z"
panic = "abort"
strip = false
debug = true

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
debug = false
