[package]
name = "demo"
version = "0.0.0"
edition = "2021"
authors = ["Adrian Macal <adma@amacal.pl>"]

[dependencies]
adma-io = { path = "../../shared/adma-io", default-features = false }

[features]
default = []
tracing = ["io-tracing", "heap-tracing", "uring-tracing"]
io-tracing = ["adma-io/tracing"]
heap-tracing = ["adma-io/heap-tracing"]
uring-tracing = ["adma-io/uring-tracing"]

[profile.dev]
opt-level = "z"
panic = "abort"
strip = false
debug = true

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
debug = false
