[package]
name = "adma-io"
version = "0.0.0"
edition = "2021"
authors = ["Adrian Macal <adma@amacal.pl>"]

[dependencies]
adma-heap = { path = "../adma-heap", default-features = false }
adma-trace = { path = "../adma-trace", default-features = false }
adma-uring = { path = "../adma-uring", default-features = false }

[features]
std = []
default = []
tracing = []
heap-tracing = ["adma-heap/tracing"]
uring-tracing = ["adma-uring/tracing"]
